[tool.poetry]
name = "logistics_app"
version = "0.1.0"
description = "A FastAPI-based logistics management backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13.5"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = "^2.7"
sqlalchemy = "^2.0"
python-dotenv = "^1.0"
asyncpg = "^0.29.0"
alembic = "^1.13"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
httpx = "^0.27"
black = "^24.3"
isort = "^5.13"
mypy = "^1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
