[tool.poetry]
name = "NavEx"
version = "0.1.0"
description = "A FastAPI-based logistics management backend"
authors = ["Aryant <aryantpratapsingh@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13.5"
fastapi = {extras = ["all"], version = "^0.116.1"}
uvicorn = { extras = ["standard"], version = "^0.35.0" }
pydantic = "^2.11.7"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.42"}
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
asyncpg = "^0.30.0"
pyjwt = "^2.10.1"
poetry-dotenv = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
